--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,15 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
-
+.links {
+  display: flex;
+  gap: 10px;
+}
 .logo {
   font-size: 48px;
   font-weight: 900;
@@ -14,6 +21,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0;
 }
 
 a {
