--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,14 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  margin: 32px;
+}
+.item {
+  text-align: center;
+  max-width: 200px;
 }
