--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -4,24 +4,33 @@ body {
 }
 
 .card {
+  background: #e3f4ff;
   width: 400px;
-  background: #fff;
   margin: 16px auto;
+  border: 10px solid white;
 }
 
 .title {
-  background: #e3f4ff;
+  font-size: 20px;
+  border-bottom: 8px solid white;
+  padding: 10px;
+  margin: 0;
 }
 
 .content {
-  background: #e3f4ff;
+  border-bottom: 8px solid white;
+  padding: 10px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: auto;
+  padding: 10px 20px;
 }
