--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -41,7 +41,7 @@ button {
   text-align: center;
 }
 .popup-modal p {
-  margin-bottom: 24px
+  margin-bottom: 24px;
 }
 
 .backdrop {
@@ -53,11 +53,20 @@ button {
 }
 
 .popup-modal.show {
-  opacity: 100%;
   pointer-events: all;
+  opacity: 100%;
+  animation: slide 5s linear infinite;
 }
 
 .backdrop.show {
   opacity: 30%;
 }
 
+.popup-modal {
+  transition: transform 0.3s ease-in-out, opacity 0.4s ease;
+  transform: translate(-50%, -100%);
+}
+
+.popup-modal.show {
+  transform: translate(-50%, -50%);
+}
